--- a/index.html
+++ b/index.html
@@ -66,7 +66,18 @@
                                 <h2 id="updateLogTitle">What&rsquo;s new</h2>
                                 <div class="changelog-entries">
 									<div class="changelog-entry">
-                                                <button class="changelog-toggle" id="changelog-toggle-2025-11-06" aria-expanded="true" aria-controls="changelog-panel-2025-11-06">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-12-25" aria-expanded="true" aria-controls="changelog-panel-2025-12-25">
+                                                        <span class="changelog-date">25/12/2025</span>
+                                                        <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
+                                                </button>
+                                                <div id="changelog-panel-2025-12-25" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-12-25">
+                                                        <ul>
+                                                                <li><strong>Plan next batch:</strong> After completing a calculation, you can now continue planning with the remaining materials. The new "Plan next batch" button automatically fills in the leftover material amounts and takes you back to the input page, making it easy to plan multiple batches of templates.</li>
+                                                        </ul>
+                                                </div>
+                                        </div>
+									<div class="changelog-entry">
+                                                <button class="changelog-toggle" id="changelog-toggle-2025-11-06" aria-expanded="false" aria-controls="changelog-panel-2025-11-06">
                                                         <span class="changelog-date">06/11/2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
@@ -446,5 +457,3 @@
 	</footer>
 </body>
 </html>
-
-
