--- a/index.html
+++ b/index.html
@@ -68,18 +68,19 @@
                                 <div class="changelog-entries">
 									<div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2026-01-05" aria-expanded="true" aria-controls="changelog-panel-2026-01-05">
-                                                        <span class="changelog-date">05/01/2026</span>
+                                                        <span class="changelog-date">January 5, 2026</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2026-01-05" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2026-01-05">
                                                         <ul>
                                                                 <li><strong>Valorous Kingsguard items:</strong> Added the full equipment lineup to planning calculations.</li>
+                                                                <li><strong>Improved date display:</strong> Changelog dates now use month names.</li>
                                                         </ul>
                                                 </div>
                                         </div>
 									<div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-12-25" aria-expanded="false" aria-controls="changelog-panel-2025-12-25">
-                                                        <span class="changelog-date">25/12/2025</span>
+                                                        <span class="changelog-date">December 25, 2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2025-12-25" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-12-25">
@@ -90,7 +91,7 @@
                                         </div>
 									<div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-11-06" aria-expanded="false" aria-controls="changelog-panel-2025-11-06">
-                                                        <span class="changelog-date">06/11/2025</span>
+                                                        <span class="changelog-date">November 6, 2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2025-11-06" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-11-06">
@@ -101,7 +102,7 @@
                                         </div>
                                         <div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-10-22" aria-expanded="false" aria-controls="changelog-panel-2025-10-22">
-                                                        <span class="changelog-date">22/10/2025</span>
+                                                        <span class="changelog-date">October 22, 2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2025-10-22" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-10-22">
@@ -113,7 +114,7 @@
                                         </div>
                                         <div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-06-10" aria-expanded="false" aria-controls="changelog-panel-2025-06-10">
-                                                        <span class="changelog-date">10/06/2025</span>
+                                                        <span class="changelog-date">June 10, 2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2025-06-10" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-06-10">
@@ -125,7 +126,7 @@
                                         </div>
                                         <div class="changelog-entry">
                                                 <button class="changelog-toggle" id="changelog-toggle-2025-04-10" aria-expanded="false" aria-controls="changelog-panel-2025-04-10">
-                                                        <span class="changelog-date">10/04/2025</span>
+                                                        <span class="changelog-date">April 10, 2025</span>
                                                         <svg class="changelog-arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" aria-hidden="true" focusable="false"><path d="M41.4 150.6c12.5-12.5 32.8-12.5 45.3 0L160 223.9l73.4-73.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-96 96c-12.5 12.5-32.8 12.5-45.3 0l-96-96c-12.5-12.5-12.5-32.8 0-45.3z"/></svg>
                                                 </button>
                                                 <div id="changelog-panel-2025-04-10" class="changelog-panel" role="region" aria-labelledby="changelog-toggle-2025-04-10">
